# dl-projects

./: .gitignore  README.md
cv_project/: 2_video_opencv.py  3_youtube_opencv.py  4_mediapipe_hands.py  5_mediapipe_face.py  6_mediapipe_pose.py  7_mediapipe_collect_data.py  8_mediapipe_train.ipynb  9_mediapipe_pred.py  hand_data.csv  main.py  pyproject.toml
ocr_project/: main.py  ocr_model.ipynb  pyproject.toml
yolo_project/: 1_detect_model.ipynb  2_seg_model.ipynb  main.py  pyproject.toml  yolo_exercise.ipynb  youtube_yolo.py
yolo_project/MyProject-1/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo_project/MyProject-1/test/labels/: 12_jpg.rf.4391fcd7414768f0f504c86599eae4cd.txt  15_jpg.rf.5e9df490cdb09dcf13e1463c40f3cfe8.txt  9_jpeg.rf.7a8375482c12fabad615d51912138f71.txt
yolo_project/MyProject-1/train/: labels.cache
yolo_project/MyProject-1/train/labels/: 10_png.rf.038953ecae67bd3b497949dbd421d82b.txt  11_jpg.rf.9db54907ebbf3154aba49ce08089b903.txt  13_jpeg.rf.44fb919124525520981e4fc80f8ebd01.txt  14_jpg.rf.bb58af3c876c57803e0c2291f3774775.txt  16_jpg.rf.fa6cd634bb84bee285d793c41a3b71e1.txt  17_jpeg.rf.9c0562c6e2b2ec6a79319783ef35da54.txt  18_jpg.rf.cec56e17bf2a3c71fca82648ec50ac76.txt  19_jpg.rf.c57990a4f10a2f9d564ccce97d3939b1.txt  21_png.rf.c47e75291eb3173a3441b75e5d422ded.txt  22_png.rf.bb8636859860c23741f9483cb11ec531.txt  23_jpg.rf.dd4f6b304970cccdfe220b5e30df70ef.txt  24_jpg.rf.a4fe55b412ee120a81907ae2522d024c.txt  27_jpg.rf.d1b704843c035e702e48610f13e35b19.txt  (+8 more)
yolo_project/MyProject-1/valid/: labels.cache
(+6 files in other folders)
